fixed tab spacing and css file

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Great+Vibes');
 
 body {
-	margin: 0
+	margin: 0;
 	padding: 0;
 	margin-top: 110px;
 	min-height: 75vh;
@@ -9,7 +9,6 @@ body {
 	/*background-size: cover; */
 	background-repeat: no-repeat;
 }
-
 
 h1 {
 	text-align: center;
